Make sure long option names don't break the select layout
The segment `used shipping method` might contain long names that are
displayed inside the select box to select shipping method names. Those
long names were breaking the layout of the select box. This commit fixes
this problem by adding a scrollbar to each option when needed.

See https://github.com/mailpoet/mailpoet/pull/4967#issuecomment-1602425406

[MAILPOET-4992]

--- a/mailpoet/assets/css/src/generic/_forms-select.scss
+++ b/mailpoet/assets/css/src/generic/_forms-select.scss
@@ -137,6 +137,7 @@
 .mailpoet-form-react-select-option {
   align-items: center;
   display: flex;
+  overflow: auto;
 }
 
 .mailpoet-form-react-select-tag {
